@@ -137,3 +137,5 @@ Trunk (unreleased changes)
     PIG-284: target for building source jar (oae via olgan)
 
     PIG-294: string comparator unit tests (sms via pi_song)
+
+    PIG-258: cleaning up directories on failure (daijy via olgan)
